available, CPU time is only available on Linux and macOS, GC time is
unavailable.

* Likewise, the following Isabelle/ML system operations are run in the
context of Isabelle/Scala:

  - Isabelle_System.make_directory
  - Isabelle_System.copy_dir
  - Isabelle_System.copy_file
  - Isabelle_System.copy_base_file
  - Isabelle_System.rm_tree
  - Isabelle_System.download


*** System ***

* Command-line tool "isabelle version" supports repository archives
(without full .hg directory). More options.

* Obsolete settings variable ISABELLE_PLATFORM32 has been discontinued.
Note that only Windows supports old 32 bit executables, via settings
variable ISABELLE_WINDOWS_PLATFORM32. Everything else should be
ISABELLE_PLATFORM64 (generic Posix) or ISABELLE_WINDOWS_PLATFORM64
(native Windows) or ISABELLE_APPLE_PLATFORM64 (Apple Silicon).



New in Isabelle2021 (February 2021)
-----------------------------------

*** General ***

* On macOS, the IsabelleXYZ.app directory layout now follows the other
platforms, without indirection via Contents/Resources/. INCOMPATIBILITY,
use e.g. IsabelleXYZ.app/bin/isabelle instead of former
IsabelleXYZ.app/Isabelle/bin/isabelle or
IsabelleXYZ.app/Isabelle/Contents/Resources/IsabelleXYZ/bin/isabelle.

* HTML presentation uses rich markup produced by Isabelle/PIDE,
resulting in more colors and links.

* HTML presentation includes auxiliary files (e.g. ML) for each theory.

* Proof method "subst" is confined to the original subgoal range: its
included distinct_subgoals_tac no longer affects unrelated subgoals.
Rare INCOMPATIBILITY.

* Theory_Data extend operation is obsolete and needs to be the identity
function; merge should be conservative and not reset to the empty value.
Subtle INCOMPATIBILITY and change of semantics (due to
Theory.join_theory from Isabelle2020). Special extend/merge behaviour at
the begin of a new theory can be achieved via Theory.at_begin.


*** Isabelle/jEdit Prover IDE ***
