@@ -226,6 +226,10 @@ context of Isabelle/Scala:
 
 *** System ***
 
+* Command-line tool "isabelle build" supports option -L FILE for syslog
+messages. Such messages can be produced in Isabelle/ML via formal
+Output.system_message or informal Output.physical_stderr.
+
 * Command-line tool "isabelle version" supports repository archives
 (without full .hg directory). More options.
 
